5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1798_2572.log
== SUBMITION (2019-06-12 13:07:54) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	it(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
		
print(v)
-- EXECUTION TIME:
0.710009
-- ERROR:
  File "/home/codebench/codes/1798/2572/main.py", line 5
    it(vet[i]%2!=0):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:09:38) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	it(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
print(v)
-- EXECUTION TIME:
0.589352
-- ERROR:
  File "/home/codebench/codes/1798/2572/main.py", line 5
    it(vet[i]%2!=0):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:09:39) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	it(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
print(v)
-- EXECUTION TIME:
1.30301
-- ERROR:
  File "/home/codebench/codes/1798/2572/main.py", line 5
    it(vet[i]%2!=0):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:09:59) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	it(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
		
print(v)
-- EXECUTION TIME:
1.38259
-- ERROR:
  File "/home/codebench/codes/1798/2572/main.py", line 5
    it(vet[i]%2!=0):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:09:59) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	it(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
		
print(v)
-- EXECUTION TIME:
1.40407
-- ERROR:
  File "/home/codebench/codes/1798/2572/main.py", line 5
    it(vet[i]%2!=0):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:10:23) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	it(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
		
print(v)
-- EXECUTION TIME:
0.551841
-- ERROR:
  File "/home/codebench/codes/1798/2572/main.py", line 5
    it(vet[i]%2!=0):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:10:25) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	it(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
		
print(v)
-- ERROR:
File "XXXX", line 5
    it(vet[i]%2!=0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:10:39) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
		
print(v)
-- EXECUTION TIME:
0.875853
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
matricula:[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
matricula:[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
matricula:[31874903]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:10:44) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:11:07) 
-- CODE:
from numpy import*
vet=array(eval(input("matricula:")))
g=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		g+=1
v=zeros(g,dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[h]=vet[i]
		h+=1
		
print(v)
-- EXECUTION TIME:
1.06872
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
